Release v0.1.3
-----------
Unreleased

Additions:
- New syntax for declaring quoted code blocks.
    - `[captures] { body }` for blocks.
    - `[captures] ( expr )` for expressions.
- `Optional.with` for running a block of code with the value in an Optional, if one is present.
- `iter.flatten`

Removals:
- Remove old syntax for quoted blocks, `#quote` and `#()`.
    - Switch to `[] {}` and `[] ()` respectively.

Changes:

Bugfixes:


Release v0.1.2
-----------
30th May 2023

Additions:
* Tagged unions (`union` type)
* String literals can have unicode code points.
    - '\uXXXX' for small code points (less than U+FFFF)
    - '\UXXXXXX' for large code points
    - Does not support UTF-16 surrogate pairs
* `iter.next_opt`
* `memory.ptr_add`
* `misc.any_member`

Removals:

Changes:
* `Optional` is now a tagged-union
* `Result` is now a tagged-union
* `iter.single` can take a `dispose` function, which is called on close of the
    iterator, with the single value yielded.
* `io.write_escaped_str` supports escaping "\\" now.
* In Javascript runtime, made `__read_from_input` not defined right away, so
    it can be overridden depending on the needs of the program.

Bugfixes:
* `json` encoder was wrongly not encoding strings when using `encode` on an `any`.



Release v0.1.1a
-----------
15th May 2023

Additions:

Removals:

Changes:
* Javascript now supports time at the platform layer.
    - Expects import "host.time"

Bugfixes:
* Fixed javascript runtime not compiling due to missing dependency on `core.os`.


Release v0.1.1
-----------
15th May 2023

Additions:
* Ability to have tags on `#foreign` block procedures.
    - This will enable the creation different binding generators, such jsbindgen.
* WASI support for threads at the platform layer.
    - Requires passing '--multi-threaded' CLI flag.
* `#distinct` types can now be made over any type.
    - Used to be only primitives.
* New `logo-new-256.ico` for favicon on website.
* `u8.to_upper` and `u8.to_lower`